--- a/index.html
+++ b/index.html
@@ -39,24 +39,25 @@
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-4">
           <img class="img-circle" src="http://www.papelesespeciales.es/images/carpeline_tela_blanco.jpg" alt="css3">
-          <h2 class="skills"><span>CSS3<span></h2>
+          <h4 class="skills"><span>CSS3<span></h4>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <img class="img-circle" src="http://www.papelesespeciales.es/images/carpeline_tela_blanco.jpg" alt="html5">
-          <h2 class="skills"><span>HTML5<span></h2>
+          <h4 class="skills"><span>HTML5<span></h4>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4">
           <img class="img-circle" src="http://www.papelesespeciales.es/images/carpeline_tela_blanco.jpg" alt="js">
-          <h2 class="skills"><span>JS<span></h2>
+          <h4 class="skills"><span>JS<span></h4>
         </div>
       </div>
     </div>
 
     <br>
     <br>
-    <div class="col-xs-12 col sm-6 col-md-6">
-      <h4>Contacto</h4>
+    <div class="col-xs-12 col-sm-6 col-md-6">
+      <p>Contacto</p>
       <form>
+      <fieldset>
         <div class="form-group">
           <label for="inputcorreo">Correo</label>
           <input type="email" class="form-control" id="inputcorreo" placeholder="ejemplo@correo.com">
@@ -69,6 +70,7 @@
         <br>
         <br>
         <br>
+      </fieldset>
       </form>
     </div>
     <br>
